<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Timer display -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:000"
        android:textSize="52sp"
        android:textStyle="bold"
        android:textColor="@color/timer_color"
        android:fontFamily="monospace"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/startbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- START button -->
    <Button
        android:id="@+id/startbutton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/button_start"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- PAUSE button -->
    <Button
        android:id="@+id/pausebutton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/button_pause"
        android:textSize="16sp"
        android:enabled="false"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/startbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RESET button -->
    <Button
        android:id="@+id/resetbutton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/button_reset"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/pausebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
